fix start button display bug on safari firefox, add favicon

--- a/src/app/components/taskbar/taskbar.module.css
+++ b/src/app/components/taskbar/taskbar.module.css
@@ -219,7 +219,7 @@
 
 .startMiddleSection {
   grid-area: a / b / a / b;
-  background: url(/start/startMiddle.svg);
+  background: url(/start/startMiddle.png);
   background-size: auto 100%;
   z-index: 2;
   display: flex;
@@ -229,18 +229,18 @@
 }
 .startMiddleSectionHover {
   grid-area: a / b / a / b;
-  background: url(/start/startMiddle.svg);
+  background: url(/start/startMiddle.png);
   background-size: auto 100%;
   z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: -1px;
   filter: brightness(110%);
+  margin-right: -1px;
 }
 .startMiddleSectionOpen {
   grid-area: a / b / a / b;
-  background: url(/start/startMiddleOpen.svg);
+  background: url(/start/startMiddleOpen.png);
   background-size: auto 100%;
   z-index: 2;
   display: flex;
@@ -250,7 +250,7 @@
 }
 .startMiddleSectionHoverOpen {
   grid-area: a / b / a / b;
-  background: url(/start/startMiddleOpen.svg);
+  background: url(/start/startMiddleOpen.png);
   background-size: auto 100%;
   z-index: 2;
   display: flex;
@@ -258,6 +258,7 @@
   align-items: center;
   margin-right: -1px;
   filter: brightness(130%);
+  margin-right: -1px;
 }
 @media screen and (min-width: 0px),
   screen and (min--moz-device-pixel-ratio: 0) {
